--- a/gb/ncid277_2.md
+++ b/gb/ncid277_2.md
@@ -32,7 +32,13 @@
 <tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/17/n11728802.md#1" target="_blank">美驻华使馆推文：在中国境外 也受中共监控</a><br></h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/17/n11728802.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/03/c098732f9da5c7128ae86118aeb6418a-150x120.jpg" align ="left"></a>美国驻华使馆12月16日发推文说，一项新的报告指出，中国（中共）对网络自由的压制全球最严重，即使是中国境外的人也不安全。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月18日 3:23 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/17/n11728642.md#1" target="_blank">“火狐狸”视频暴红 却是官媒造假</a><br></h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/17/n11728642.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/Untitled-11-150x120.jpg" align ="left"></a>中共官媒“中新网”周日刊登一段网传视频，称在黑龙江漠河市的公路上发现一只毛色鲜红的狐狸在雪中觅食，视频被纷纷转载。但随后被发现这段视频经过调色，拍摄地也不是黑龙江。“中新网”被迫公开道歉。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月18日 12:43 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/17/n11728616.md#1" target="_blank">美政府将出台法规 限向中国出口敏感技术</a><br></h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/17/n11728616.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/Commerce_Building_view_from_Mall_2-150x120.jpg" align ="left"></a>路透社看到的一份文件显示，川普（特朗普）政府正在敲定一套出口收紧规则，以限制向中国等国出口先进技术。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月18日 12:40 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/17/n11728358.md#1" target="_blank">港人给抗议者们写圣诞卡：以后再庆祝</a><br></h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/17/n11728358.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1912120820322188-150x120.jpg" align ="left"></a>香港民主运动持续进行。圣诞节将近，抗议者们没有因此放松，在坚持抗争的同时，他们还不忘给受伤和被拘留的手足们写圣诞贺卡，送上自己的一份鼓励和祝福。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 11:17 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/19/n11731683.md#1" target="_blank">【翻墙必看】高级五毛花千芳为何遭网民嘲讽</a><br></h3>大纪元每天为读者梳理翻墙必看的文章：
+
+1.五毛花千芳曝中共经济衰败 母亲养老证遭收缴
+中共“高级五毛”花千芳日前再次口无遮拦，在微博上披露辽宁省抚顺市当局收缴了他母亲的养老保险证书，其言论则透露出当地经济严重恶化的状况。
+
+2.海风：澳门取代香港，又是一场政治闹剧
+顺我者昌，逆我者亡。这是中共独裁者的天性。香港不听话，中共就要把它国际金融中心的.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月19日 9:00 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/19/n11731657.md#1" target="_blank">清华大学90后共青团官员校内溺亡</a><br></h3>日前，90后的清华大学团委科创中心主任朱某（朱小亮）在校园内坠河身亡的消息，引发外界关注。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月19日 10:42 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/18/n11729559.md#1" target="_blank">中共航母山东舰交付仪式 多名高官缺席</a><br></h3>日前，中共第一艘航空母舰山东舰交付海军。这次交付仪式打破了以往的几个惯例。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月18日 2:07 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/ncid277.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/hxrfvz257/djy/blob/master/gb/ncid277.md#1">1</a>&nbsp;&nbsp;2&nbsp;&nbsp;<a href="https://github.com/hxrfvz257/djy/blob/master/gb/ncid277_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/hxrfvz257/djy/blob/master/gb/ncid277_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/hxrfvz257/djy/blob/master/gb/ncid277_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/hxrfvz257/djy/blob/master/gb/ncid277_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/hxrfvz257/djy/blob/master/gb/ncid277_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/hxrfvz257/djy/blob/master/gb/ncid277_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/hxrfvz257/djy/blob/master/gb/ncid277_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/hxrfvz257/djy/blob/master/gb/ncid277_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/hxrfvz257/djy/blob/master/gb/ncid277_3.md#1">下一页</a></h3></td></tr>
