--- a/gb/ncid283_3.md
+++ b/gb/ncid283_3.md
@@ -26,7 +26,7 @@
 <tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/13/n11719537.md#1" target="_blank">【世事关心】罗宾逊：美资本市场是中共生命线</a><br></h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/13/n11719537.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/111111-150x120.jpg" align ="left"></a>贸易是美中关系中一个抢眼的问题。他们能应付贸易战之类的问题吗？是的，这对他们有些痛苦，但是，他们能，他们能一直玩下去。看看那些事情起落吧。你知道的，你没有看到他们有任何惊慌失措。他们只是把货币贬值或者做些其它事情来抵消关税的负面影响。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月13日 4:34 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/13/n11720188.md#1" target="_blank">富士康再度减持阿里股票 套现2.7亿美元</a><br></h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/13/n11720188.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/05/20190514-HUAMING-HONGKONG-03-150x120.jpg" align ="left"></a>台湾鸿海集团旗下的富士康创投（Foxconn Ventures）今天（13日）宣布，出售部分所持阿里巴巴股分，套现2.72亿美元。这是今年富士康第二次出售阿里巴巴的股票。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月13日 2:40 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/10/n11714551.md#1" target="_blank">盘点2020年最大的中国“灰犀牛”</a><br></h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/10/n11714551.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/GettyImages-929521586-150x120.jpg" align ="left"></a>年末已至，回顾今年的中国经济，若选用三个关键词来描述的话，莫过于中美贸易战、经济下行和金融风险。与捷报频传的美国经济截然相反，中共最近发布的各种数据和报告，不但没带来任何能稳住经济信心的好消息，反而释放出不祥的讯号，揭示出一头头的“灰犀牛”正冲撞而来。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月13日 2:19 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/13/n11719819.md#1" target="_blank">港媒：中共六招严控企业 国进民退忧虑加剧</a><br></h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/13/n11719819.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2014/02/1401312212562068-150x120.jpeg" align ="left"></a>中共面对经济危机及贸易战冲击，加大了对企业的控制。有港媒盘点了中共控制企业的招数，而中共此举也导致了企业家国进民退的忧虑。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月13日 2:07 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/15/n11723512.md#1" target="_blank">烟台银行前董事长涉受贿罪被起诉</a><br></h3>12月12日，中共烟台市纪委监委网站发布通报称，烟台银行原党委书记、董事长叶文君被开除党籍，将其涉嫌犯罪问题移送检察机关依法审查起诉。这已经是烟台银行第三个落马的董事长。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月15日 8:33 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/14/n11723140.md#1" target="_blank">20年最大国企债务违约 当局袖手引市场忧虑</a><br></h3>天津物产集团爆发20年来中国国企最大规模的美元债务违约，而中国政府没有提供支持，令债券市场大感意外。分析认为，中国政府的态度已有转变，未来投资者可能承担巨大损失。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月15日 7:25 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/13/n11721310.md#1" target="_blank">【世界十字路口】会客室：债务风暴席卷中国</a><br></h3>曾为世界500强企业之一的“天津物产集团”，12月12日宣布完成11亿美元的债务重整，相当于宣告债券违约，引发国际媒体竞相关注中国债务危机。中国债务问题会不会对香港、台湾等地带来影响？中国地方政府的债务问题又有多严峻？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月13日 11:37 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/ncid283_2.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/hxrfvz257/djy/blob/master/gb/ncid283.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/hxrfvz257/djy/blob/master/gb/ncid283_2.md#1">2</a>&nbsp;&nbsp;3&nbsp;&nbsp;<a href="https://github.com/hxrfvz257/djy/blob/master/gb/ncid283_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/hxrfvz257/djy/blob/master/gb/ncid283_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/hxrfvz257/djy/blob/master/gb/ncid283_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/hxrfvz257/djy/blob/master/gb/ncid283_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/hxrfvz257/djy/blob/master/gb/ncid283_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/hxrfvz257/djy/blob/master/gb/ncid283_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/hxrfvz257/djy/blob/master/gb/ncid283_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/hxrfvz257/djy/blob/master/gb/ncid283_4.md#1">下一页</a></h3></td></tr>
