--- a/gb/news2007_3.md
+++ b/gb/news2007_3.md
@@ -28,7 +28,7 @@
 <tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/6/n11706278.md#1" target="_blank">揭开白蛇传的爱情面纱：法海原为除妖高僧</a><br></h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/6/n11706278.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/Scenic_Attractions_of_West_Lake_30-150x120.jpg" align ="left"></a>建于东晋的镇江泽心寺，唐时始称金山寺，后成为临济宗传承道场，被奉为佛教禅宗经典名寺。金山寺素以“高僧降蛇”为其独特的寺庙文化而名闻遐迩。提到“高僧降蛇”，就不得不说到金山寺的“开山裴祖”——高僧法海，亦即后世诸多版本白蛇传中法海和尚的原型。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月13日 1:47 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/12/n11718913.md#1" target="_blank">作文选登：面对未来，我需具备的能力</a><br></h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/12/n11718913.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/414629_medium-150x120.jpg" align ="left"></a>当我们迈入人生的不同阶段时，都会遇到各式各样的挑战，我们应该具备多元的能力，让未来的道路走得明亮、灿烂。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月13日 1:03 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/6/n11704999.md#1" target="_blank">得天扶佑乾隆帝书法艺术 透露怎样的内心世界？</a><br></h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/6/n11704999.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/08/88300293_p-150x120.jpg" align ="left"></a>乾隆皇帝在书画上的题识，展露了什么精神气息？一代盛世得天福祐明君对应书画的态度和品味，展露他怎样的内心世界？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月12日 7:36 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/13/6/22/n3899772.md#1" target="_blank">诈骗枉法升官 惶惧遭报惨死</a><br></h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/13/6/22/n3899772.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/shutterstock_1029639910-150x120.jpg" align ="left"></a>县令发现从这里走水路，可以直通县城。但是，乘船的客商，却总要在这里卸货，再雇用脚夫，从陆路把货物运往县城............<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月12日 5:53 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/15/n11724144.md#1" target="_blank">调笑令．神传文化之光</a><br></h3>诚信， 诚信， 贸易往来兴顺。 神传文化遵循， 厚德先民善仁。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月15日 9:42 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/15/n11723574.md#1" target="_blank">诗歌：偶感</a><br></h3> 庭中松柏翠 窗外雪纷飞 洁白衬绿意 暖室望寒梅 一别中原二十载......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月15日 2:47 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/13/n11721346.md#1" target="_blank">五律：寂</a><br></h3>飘地鹅毛响，接天云影回。 蝉吟如夏吼，人语作冬雷。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月14日 12:15 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/12/n11718633.md#1" target="_blank">五律：清晨</a><br></h3> 遥夜划鸡鸣，犬从三五声。 云岚熏晓色，草露衬时荣。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月13日 12:12 AM			</td></tr>
